<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_personalise"
        android:title="@string/pref_category_general">

        <ListPreference
            android:defaultValue="en"
            android:entries="@array/pref_language_list_options"
            android:entryValues="@array/pref_language_list_values"
            android:key="@string/pref_key_language"
            android:title="@string/pref_title_language" />
        <ListPreference
            android:defaultValue="GBP"
            android:entries="@array/pref_currency_list_options"
            android:entryValues="@array/pref_currency_list_values"
            android:key="@string/pref_key_currency"
            android:title="@string/pref_title_currency" />
        <!--<EditTextPreference-->
        <!--android:defaultValue="1234"-->
        <!--android:hint="@string/pin_hint"-->
        <!--android:inputType="number"-->
        <!--android:key="pref_key_pin"-->
        <!--android:maxLength="4"-->
        <!--android:title="@string/pref_pin_title"></EditTextPreference>-->

        <!--<ListPreference-->
        <!--android:defaultValue="en"-->
        <!--android:entries="@array/pref_language_list_options"-->
        <!--android:entryValues="@array/pref_language_list_values"-->
        <!--android:key="pref_language"-->
        <!--android:title="@string/pref_language_title" />-->
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_amazon"
        android:title="@string/pref_category_amazon">

        <Preference
            android:key="@string/pref_key_amazon_upload"
            android:title="@string/pref_title_upload_itinerary" />

        <Preference
            android:key="@string/pref_key_amazon_download"
            android:title="@string/pref_title_download_itinerary" />

    </PreferenceCategory>

    <!--<PreferenceCategory-->
    <!--android:key="pref_key_pat"-->
    <!--android:title="@string/pref_category_pat">-->
    <!--<Preference-->
    <!--android:key="pref_key_about_us"-->
    <!--android:summary="@string/pref_about_us_summ"-->
    <!--android:title="@string/pref_about_us_title"></Preference>-->
    <!--</PreferenceCategory>-->
    <!--<PreferenceCategory-->
    <!--android:key="pref_key_discussion"-->
    <!--android:title="Discussion">-->
    <!--<EditTextPreference-->
    <!--android:defaultValue=""-->
    <!--android:key="prefer_key_discussions_email"-->
    <!--android:summary="The email to be remembered whenever you go to sign in"-->
    <!--android:title="Remembered Email"></EditTextPreference>-->
    <!--</PreferenceCategory>-->
</PreferenceScreen>