<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_my_trips_grey_24dp"
            android:title="@string/title_home_fragment" />
        <item
            android:id="@+id/nav_deleted_trips"
            android:icon="@drawable/ic_recycle_bin_grey_24dp"
            android:title="@string/title_deleted_trip_fragment" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_grey_24dp"
            android:title="@string/title_profile_fragment" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey_24dp"
            android:title="@string/title_activity_settings" />
    </group>

    <group
        android:id="@+id/drawer_group_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_grey_24dp"
            android:title="@string/title_about" />
    </group>
</menu>
