<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.milton.archwilio.activities.WeatherActivity"
    tools:showIn="@layout/activity_weather">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/weather_forecast_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/weather_forecast"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weather_forecast_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_forecast_title_text_view" />

        <TextView
            android:id="@+id/seven_days_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_forecast_recycler_view"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/seven_days"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/fourteen_days_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/seven_days_text_view"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_toEndOf="@id/seven_days_text_view"
            android:text="@string/fourteen_days"
            android:textColor="@color/grey500" />

        <TextView
            android:id="@+id/weather_details_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fourteen_days_text_view"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/details"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_details_title_text_view">

            <ImageView
                android:id="@+id/weather_details_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_rain_72dp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/weather_details_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
